<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainhome"
            android:icon="@drawable/ic_home_solid"
            android:title="@string/home" />


        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playstation_brands"
            android:title="@string/playlist" />


        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_wallet_solid"
            android:title="@string/reward"
            />


        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user_solid"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_singup"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/singup_login" />

        <item
            android:id="@+id/nav_ivite"
           android:icon="@drawable/ic_gift"
            android:title="@string/invite_earn" />
        <item
            android:id="@+id/nav_FeedBack"
                android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback"/>


    </group>

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cog_solid"
            android:title="@string/settings"
            />


    </group>


</menu>